--- a/main-styles.css
+++ b/main-styles.css
@@ -880,7 +880,7 @@ tfoot {
 
 
 body.pro-p {
-  background-image: url('Untitled\ design\ \(5\).png');
+  background-image: url('Untitled_design_5.png');
   background-size: auto;
   background-repeat: repeat; 
 }
@@ -1269,7 +1269,7 @@ body.dairy-p {
 /*Vegetables Page*/
 
 body.veg-p {
-  background-image: url('Untitled\ design\ \(2\).png');
+  background-image: url('Untitled_design_2.png');
   background-size:auto;
   background-repeat: repeat; 
 }
