--- a/main-styles.css
+++ b/main-styles.css
@@ -17,269 +17,166 @@ body {
 }
 
 .logo {
-  float: left;
   width: 100px;
   height: 100px;
   padding: 0px 20px;
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 
-.header .navbar {
+.navbar {
   background-color: #ba7474;
-  overflow: auto;
-  width: 1300px;
+  width: 100%;
   display: flex;
-  text-align: justify;
-  padding: 10px 5px;
-  list-style-type: none;
-  margin-top: 30px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
 }
 
-.navbar ul {
-  padding: 50px 10px;
+.navbar ol {
+  display: flex;
+  align-items: center;
+  padding: 0;
   margin: 0;
-  color: #ba7474;
-  margin-left: 20px;
+  list-style-type: none;
 }
 
-.navbar ul li {
-  list-style-type: none;
-  display: flex;
-  padding: 60px;
-  padding-left: 20px;
-  margin: 20px;
+.navbar ol li {
+  margin: 0 20px;
+  position: relative;
 }
 
 .navbar a {
   text-decoration: none;
-  color: black;
-  padding: 0px;
-  margin-top: -30px;
-  margin-left:  40px;
+  color:#cba487;
   font-size: 20px;
+  font-weight: bold;
 }
 
 .navbar a:hover {
   color: #e5bcb4;
 }
 
-.navbar li a {
-  color: #cba487;
-  text-decoration: none;
-  margin: 30px;
-  font-weight: bold;
-}
-
 .navbar .active {
   color: black;
 }
 
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown a {
-  padding: 0px 20px;
-  margin: 20px;
-}
-
 .dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 0px 16px;
   background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  color: black;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #bb7671;
-  min-width: 100px;
+  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
   z-index: 1;
 }
 
 .dropdown-content a {
-  float: none;
-  color: black;
-  padding: 0px 14px;
+  color:#cba487;
+  padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
 }
 
 .dropdown-content a:hover {
-  color: #e5bcb4;
+  color: black;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-.dropdown:hover .dropbutton {
-  color: #e5bcb4;
-}
-
 .icons-image {
   display: flex;
-  align-items: center;
+  align-items:end;
   margin-left: auto;
-  
+  margin-left: 700px;
 }
 
 .icons-image img {
-  padding: 0px 10px;
-  margin-top: 25px;
+  width: 40px;
+  height: 40px;
+  margin:  15px;
 }
 
+@media (max-width: 600px) {
 
-@media (max-width: 600px){
-
-  .header {
+  .logo {
+    width: 50px;
+    height: 50px;
+    padding: 0px 10px;
     display: flex;
     align-items: center;
-    height: auto;
-    background-color: #ba7474;
-    width: 100%;
-    position: relative;
-    border: 2px solid #cba487;
-    padding: 0%;
-  }
-  .logo {
-    float: left;
-    width: 70px;
-    height: 70px;
-    padding: 0px 20px;
     justify-content: center;
   }
-  
-  .header .navbar {
-    background-color: #ba7474;
-    overflow: auto;
+  .navbar {
+    flex-direction: column;
+    align-items: stretch;
+    height: 80%;
+    width: 50%;
+  }
+
+
+  .navbar ol li {
+    margin: 0px 10px;
     width: 100%;
+    height: 90%;
     display: flex;
-    text-align: justify;
-    padding: 0px 0px;
-    list-style-type: none;
-    margin-top: 40px;
-  }
-  
-  .navbar ul {
-    padding: 0px;
-    margin: 0;
-    color: #ba7474;
+    
     
   }
-  
-  .navbar ul li {
-    list-style-type: none;
-    display: flex;
-    padding: 60px;
-    padding-left: 20px;
-    margin: 20px;
-    
-  }
-  
+
   .navbar a {
     text-decoration: none;
-    color: black;
-    padding: -50px;
-    padding-left: 10px;
-    margin-left:  10px;
-    margin-bottom: -40px;
-  }
-  
-  .navbar a:hover {
-    color: #e5bcb4;
-  }
-  
-  .navbar li a {
-    color: #cba487;
-    text-decoration: none;
+    color:#cba487;
+    font-size: 8px;
     font-weight: bold;
-    font-size: 10px;
-    padding: 1px;
+    margin-right: 5px;
+    margin-top: 30px;
   }
-  
-  .navbar .active {
-    color: black;
-  }
-  
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  .dropdown a {
-    padding: 0px 20px;
-    margin: 20px;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 0px 0px;
-    background-color: inherit;
-    font-family: inherit;
-    margin-left:  -7px;
-  }
-  
+
   .dropdown-content {
-    display: none;
-    position: absolute;
+    position: static;
     background-color: #bb7671;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
-    z-index: 1;
+    min-width: 100%;
+    box-shadow: none;
   }
-  
-  .dropdown-content a {
-    float: none;
+
+  .dropdown .dropbtn {
+    background-color: inherit;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
     color: black;
-    padding: 0px 14px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
+    margin-bottom: 100px;
+    margin-top: 2px;
   }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
+
   .icons-image {
     display: flex;
-    align-items: center;
-    margin-left: 155px;
-    margin-bottom: 40px;
+    align-items:center;
+    margin-left: auto;
+    margin-bottom: 100px;
     
   }
   
   .icons-image img {
-    padding: 0%;
-    width: 30px;
-    height: 30px;
-    
-}}
-
-
-
-@media (max-width: 768px) {
- .navbar {
-    flex-wrap: wrap;
+    width: 20px;
+    height: 20px;
+    margin: 2px;
+    margin-left: 12px;
   }
 
- .logo,.icons {
-    flex-basis: 100%;
-  }
+
 }
-
 
 /*home image*/
 .home-image {
