--- a/main-styles.css
+++ b/main-styles.css
@@ -77,6 +77,7 @@ body {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
   z-index: 1;
+  margin-top:150px
 }
 
 .dropdown-content a {
