--- a/main-styles.css
+++ b/main-styles.css
@@ -853,7 +853,7 @@ body.pro-p {
 }
 
 .box #sentence{
-  font-size:200;
+  font-size:200px;
   font-family:'Times New Roman', Times, serif;
   font-style: normal;
   padding-bottom: 10px;
