--- a/main-styles.css
+++ b/main-styles.css
@@ -49,7 +49,7 @@ body {
 
 .navbar a {
   text-decoration: none;
-  color:#cba487;
+  color:black;
   font-size: 20px;
   font-weight: bold;
 }
@@ -58,8 +58,9 @@ body {
   color: #e5bcb4;
 }
 
+
 .navbar .active {
-  color: black;
+  color: #cba487;
 }
 
 .dropdown .dropbtn {
@@ -68,6 +69,7 @@ body {
   cursor: pointer;
   font-size: 20px;
   color: black;
+  font-family:'Times New Roman', Times, serif;
 }
 
 .dropdown-content {
@@ -81,14 +83,14 @@ body {
 }
 
 .dropdown-content a {
-  color:#cba487;
+  color:black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
 .dropdown-content a:hover {
-  color: black;
+  color:#cba487
 }
 
 .dropdown:hover .dropdown-content {
