--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
   cursor: pointer;
   font-size: 20px;
   color: black;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .dropdown-content {
