--- a/style.css
+++ b/style.css
@@ -70,13 +70,15 @@ body {
   
 }
 
+
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #bb7671;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
-  z-index: 1;
+display: none;
+position: absolute;
+background-color: #bb7671;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+z-index: 1;
+margin-top:150px;
 }
 
 .dropdown-content a {
